--- a/RagnAnimes_Front/RagnAnimes/User/Register/register.html
+++ b/RagnAnimes_Front/RagnAnimes/User/Register/register.html
@@ -32,7 +32,7 @@
 
     <!-- Link para quem já tem conta -->
     <div class="links">
-      <a href="login.html">Já tenho uma conta</a>
+      <a href="/RagnAnimes/User/login/login.html">Já tenho uma conta</a>
     </div>
   </div>
 
