--- a/RagnAnimes_Front/RagnAnimes/User/esqueci/esqueci.html
+++ b/RagnAnimes_Front/RagnAnimes/User/esqueci/esqueci.html
@@ -19,7 +19,7 @@
       <button type="submit">Enviar</button>
 
       <div class="links"> <!-- Container para links extras, reutiliza a mesma classe usada no login -->
-        <a href="login.html">Voltar para o login</a> <!-- Link que leva o usuário de volta para a página de login -->
+        <a href="/RagnAnimes/User/login/login.html">Voltar para o login</a> <!-- Link que leva o usuário de volta para a página de login -->
       </div>
     </form>
   </div>
