--- a/RagnAnimes_Front/RagnAnimes/User/login/login.html
+++ b/RagnAnimes_Front/RagnAnimes/User/login/login.html
@@ -24,8 +24,8 @@
     </form>
 
     <div class="links"> <!-- Container para links extras, reutiliza a mesma classe usada no login -->
-      <a href="register.html">Não tem uma conta? crie uma!</a> <!-- Link que leva o usuário para pagina de registro -->
-      <a href="esqueci.html">Esqueci minha senha</a> <!-- Link para recuperar senha -->
+      <a href="/RagnAnimes/User/Register/register.html">Não tem uma conta? crie uma!</a> <!-- Link que leva o usuário para pagina de registro -->
+      <a href="/RagnAnimes/User/esqueci/esqueci.html">Esqueci minha senha</a> <!-- Link para recuperar senha -->
     </div>
 </body>
 </html>
