criando seletor de ID

--- a/RagnAnimes_Front/RagnAnimes/RegistrarAnime/RegistrarAnime.html
+++ b/RagnAnimes_Front/RagnAnimes/RegistrarAnime/RegistrarAnime.html
@@ -20,7 +20,7 @@
     </h1>
 
     <!-- Link para voltar à página inicial -->
-    <a href="/RagnAnimes/index/index.html" class="back-link">Voltar</a>
+    <a href="/RagnAnimes/index/index.html" class="back-link">← Voltar</a>
   </header>
 
   <div class="container">
@@ -28,6 +28,7 @@
 
     <!-- Formulário principal -->
     <form id="anime-form">
+
 
       <!-- Nome do anime -->
       <label for="nome">Nome do Anime:</label>
@@ -71,6 +72,14 @@
           <option value="DRAMA">Drama</option>
           <option value="FICCAO">Ficção</option>
           <option value="TERROR">Terror</option>
+        </select>
+      </div>
+
+          <!-- Lista suspensa para selecionar ID-->
+          <select id="Anime ID" required>
+          <option value="">Selecione um Id</option>
+          <option value="">New Id</option>
+          <option value="Id ">1</option>
         </select>
       </div>
 
