--- a/RagnAnimes_Front/RagnAnimes/RegistrarServicos/RegistrarServicos.html
+++ b/RagnAnimes_Front/RagnAnimes/RegistrarServicos/RegistrarServicos.html
@@ -12,7 +12,7 @@
     <h1>
       <img src="/img/logo/logo.png" alt="logo">
     </h1>
-    <a href="/RagnAnimes/index/index.html" class="back-link">Voltar</a>
+    <a href="/RagnAnimes/index/index.html" class="back-link">← Voltar</a>
   </header>
 
   <div class="container">
