--- a/RagnAnimes_Front/RagnAnimes/RegistrarAnime/RegistrarAnime.html
+++ b/RagnAnimes_Front/RagnAnimes/RegistrarAnime/RegistrarAnime.html
@@ -50,7 +50,7 @@
          <input type="text" id="nome" required>
 
             <!-- Ano de Lancamento do anime -->
-        <label for="anodeLancamento">Ano de Lançamento:</label>
+        <label for="anoLancamento">Ano de Lançamento:</label>
         <input type="text" id="nome" required>
 
       <!-- Categorias
