--- a/RagnAnimes_Front/RagnAnimes/User/login/login.html
+++ b/RagnAnimes_Front/RagnAnimes/User/login/login.html
@@ -26,6 +26,7 @@
     <div class="links"> <!-- Container para links extras, reutiliza a mesma classe usada no login -->
       <a href="/RagnAnimes/User/Register/register.html">Não tem uma conta? crie uma!</a> <!-- Link que leva o usuário para pagina de registro -->
       <a href="/RagnAnimes/User/esqueci/esqueci.html">Esqueci minha senha</a> <!-- Link para recuperar senha -->
+      <a href="/RagnAnimes/index/index.html">Voltar para página inicial</a>
     </div>
 </body>
 </html>
