--- a/RagnAnimes_Front/RagnAnimes/RegistrarAnime/RegistrarAnime.html
+++ b/RagnAnimes_Front/RagnAnimes/RegistrarAnime/RegistrarAnime.html
@@ -48,11 +48,11 @@
 
          <!-- Estudio do anime -->
          <label for="estudio">Estudio:</label>
-         <input type="text" id="nome" required>
+         <input type="text" id="estudio" required>
 
             <!-- Ano de Lancamento do anime -->
         <label for="anoLancamento">Ano de Lançamento:</label>
-        <input type="text" id="nome" required>
+        <input type="text" id="anoLancamento" required>
 
       <!-- Categorias
       <div class="categoria-container">
