--- a/RagnAnimes_Front/RagnAnimes/RegistrarAnime/RegistrarAnime.html
+++ b/RagnAnimes_Front/RagnAnimes/RegistrarAnime/RegistrarAnime.html
@@ -29,6 +29,14 @@
     <!-- Formulário principal -->
     <form id="anime-form">
 
+                    <!-- ID do Anime -->
+    <label for="anime-id"></label>
+    <select id="anime-id" required>
+      <option value="">Selecione um Id</option>
+      <option value="new">Novo Id</option>
+      <option value="1">1</option>
+    </select>
+
 
       <!-- Nome do anime -->
       <label for="nome">Nome do Anime:</label>
@@ -74,16 +82,6 @@
           <option value="TERROR">Terror</option>
         </select>
       </div>
-
-          <!-- Lista suspensa para selecionar ID-->
-          <select id="Anime ID" required>
-          <option value="">Selecione um Id</option>
-          <option value="">New Id</option>
-          <option value="Id ">1</option>
-        </select>
-      </div>
-
-      
 
       <!-- Botão final para salvar o anime -->
       <div class="form-actions">
