--- a/RagnAnimes_Front/RagnAnimes/RegistrarAnime/RegistrarAnime.html
+++ b/RagnAnimes_Front/RagnAnimes/RegistrarAnime/RegistrarAnime.html
@@ -33,8 +33,7 @@
     <label for="anime-id"></label>
     <select id="anime-id" required>
       <option value="">Selecione um Id</option>
-      <option value="new">Novo Id</option>
-      <option value="1">1</option>
+      <option value="0">Novo Id</option>
     </select>
 
 
