--- a/RagnAnimes_Front/RagnAnimes/index/index.html
+++ b/RagnAnimes_Front/RagnAnimes/index/index.html
@@ -51,7 +51,7 @@
         <div class="carousel">
 
           <!-- Cada "card" representa um anime -->
-          <a href="/RagnAnimes/AnimePage/anime.html">
+          <a href="/RagnAnimes/AnimePage/anime.html?id=1">
             <div class="card">
               <img src="/img/acao/MHA.jpg" alt="Boku no Hero" />
             </div>
