--- a/RagnAnimes_Front/RagnAnimes/index/index.html
+++ b/RagnAnimes_Front/RagnAnimes/index/index.html
@@ -564,6 +564,6 @@
 
 
   <!-- Script do carrossel -->
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
 </body>
 </html>
