--- a/RagnAnimes_Front/RagnAnimes/RegistrarAnime/RegistrarAnime.html
+++ b/RagnAnimes_Front/RagnAnimes/RegistrarAnime/RegistrarAnime.html
@@ -32,34 +32,33 @@
                     <!-- ID do Anime -->
     <label for="anime-id"></label>
     <select id="anime-id" required>
-      <option value="">Selecione um Id</option>
-      <option value="0">Novo Id</option>
+      <option value="0">Novo Anime</option>
     </select>
 
 
       <!-- Nome do anime -->
       <label for="nome">Nome do Anime:</label>
-      <input type="text" id="nome" required maxlength="255">
+      <input type="text" id="nome"  maxlength="255">
 
       <!-- URL da imagem -->
       <label for="imagem">URL da Imagem:</label>
-      <input type="text" id="imagem" maxlength="1000" placeholder="https://..." required>
+      <input type="text" id="imagem" maxlength="1000" placeholder="https://..." >
 
        <!-- Trailer -->
        <label for="trailer">Trailer (URL do YouTube):</label>
-       <input type="url" id="trailer" maxlength="1000" placeholder="https://www.youtube.com/embed/..." required>
+       <input type="url" id="trailer" maxlength="1000" placeholder="https://www.youtube.com/embed/..." >
        
       <!-- Descrição -->
       <label for="descricao">Descrição:</label>
-      <textarea id="descricao" rows="4" required maxlength="1000"></textarea>
+      <textarea id="descricao" rows="4"  maxlength="1000"></textarea>
 
          <!-- Estudio do anime -->
          <label for="estudio">Estudio:</label>
-         <input type="text" id="estudio" required maxlength="255">
+         <input type="text" id="estudio"  maxlength="255">
 
             <!-- Ano de Lancamento do anime -->
         <label for="anoLancamento">Ano de Lançamento:</label>
-        <input type="text" id="anoLancamento" required maxlength="255">
+        <input type="text" id="anoLancamento"  maxlength="255">
 
       <!-- Categorias
       <div class="categoria-container">
@@ -91,6 +90,7 @@
       <p class="mensagem" id="mensagem"></p>
     </form>
   </div>
+  <script src="AnimeList.js"></script>
   <script src="RegistrarAnime.js"></script>
 </body>
 </html>
