--- a/RagnAnimes_Front/RagnAnimes/index/index.html
+++ b/RagnAnimes_Front/RagnAnimes/index/index.html
@@ -42,7 +42,7 @@
 
     <!-- === Seção: Ação === -->
     <section class="carousel-section">
-      <h2>Ação</h2>
+      <h2 id="ACAO">Ação</h2>
       <div class="carousel-wrapper">
           <!-- Botão para rolar o carrossel à esquerda -->
         <button class="carousel-btn left" onclick="scrollCarousel(this, -1)">&#10094;</button>
@@ -150,7 +150,7 @@
           
     <!-- === Seção: Aventura === -->
     <section class="carousel-section">
-      <h2>Aventura</h2>
+      <h2 id="AVENTURA">Aventura</h2>
       <div class="carousel-wrapper">
         <button class="carousel-btn left" onclick="scrollCarousel(this, -1)">&#10094;</button>
         <div class="carousel">
@@ -256,7 +256,7 @@
 
     <!-- === Seção: Fantasia === -->
     <section class="carousel-section">
-      <h2>Fantasia</h2>
+      <h2 id="SUSPENSE">Fantasia</h2>
       <div class="carousel-wrapper">
         <button class="carousel-btn left" onclick="scrollCarousel(this, -1)">&#10094;</button>
         <div class="carousel">
@@ -360,7 +360,7 @@
 
     <!-- === Seção: Isekai === -->
     <section class="carousel-section">
-      <h2>Isekai</h2>
+      <h2 id="ISEKAI">Isekai</h2>
       <div class="carousel-wrapper">
         <button class="carousel-btn left" onclick="scrollCarousel(this, -1)">&#10094;</button>
         <div class="carousel">
@@ -463,7 +463,7 @@
 
     <!-- === Seção: Romance === -->
     <section class="carousel-section">
-      <h2>Romance</h2>
+      <h2 id="ROMANCE">Romance</h2>
       <div class="carousel-wrapper">
         <button class="carousel-btn left" onclick="scrollCarousel(this, -1)">&#10094;</button>
         <div class="carousel">
